added fonts and credits

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skynews</title>
+    <link
+      href="https://fonts.cdnfonts.com/css/helvetica-neue-55"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -131,6 +135,17 @@
             <label for="message">შეტყობინება</label>
             <textarea name="message" id="message"></textarea>
           </div>
+          <button>გაგზავნა</button>
+        </div>
+      </div>
+      <div class="credits">
+        <h4>ყველა უფლება დაცულია</h4>
+        <div class="credit_container">
+          <p>
+            დამზადებულია
+            <img class="heart" src="img/heart.svg" alt="heart" /> -ით
+            <img class="smart" src="img/smart.png" alt="smart" />
+          </p>
         </div>
       </div>
     </footer>
