adjusted for phone

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <img src="img/Rectangle 93.png" alt="second" />
               <img src="img/Rectangle 94.png" alt="third" />
               <img src="img/Rectangle 95.png" alt="fourth" />
-              <img src="img/Rectangle 96.png" alt="fifth" />
+              <img class="none" src="img/Rectangle 96.png" alt="fifth" />
             </div>
           </div>
 
